@startuml

entity user {
    * <PK>id: serial
    --
    * username: text(16)
    * password: text(22)
    * email: text(64)
    * phone_number: text(12)
    * is_admin: bool
    * created_at: timestamp
    * last_login: timestamp
}

entity message {
    * <PK>id: serial
    --
    * <FK>user_id: unsigned bigint
    * <FK>channel_id: unsigned bigint
    * created_at: timestamp
    * content: text(2000)
}

entity channel {
    * <PK>id: serial
    --
    * name: text(16)
    * <FK>server_id: unsigned bigint
    * <FK>category_id: unsigned bigint
    * created_at: timestamp
}

entity category {
    * <PK>id: serial
    --
    * name: text(16)
}

entity server {
    * <PK>id: serial
    --
    * name: text(16)
    * location: text
    * <FK>owner_user_id: unsigned bigint
    * created_at: timestamp
}

entity role {
    * <PK>id: serial
    --
    * name: text
    * <FK>server_id: unsigned bigint
}

entity permission {
    * <PK>id: serial
    --
    * name: text
}

entity role_permission {
    * <PK>id: serial
    --
    * <FK>role_id: unsigned bigint
    * <FK>permission_id: unsigned bigint
    * state: tinyint
}

entity server_member {
    * <PK>id: serial
    --
    * <FK>user_id: unsigned bigint
    * <FK>server_id: unsigned bigint
    * joined_at: timestamp
}

entity server_member_role {
    * <PK>id: serial
    --
    * <FK>member_id: unsigned bigint
    * <FK>role_id: unsigned bigint
}

entity channel_role {
    * <PK>id: serial
    --
    * <FK>channel_id: unsigned bigint
    * <FK>role_id: unsigned bigint
}

user ||..|{ server_member
user ||..|{ message
server }|..|| user

server ||..|{ channel
channel ||..|{ message

server ||..|{ server_member
server ||..|{ role

server_member ||..|{ server_member_role
role ||..|{ server_member_role

role ||..|{ role_permission
permission ||..|{ role_permission

channel }|..|| category

channel ||..|{ channel_role
channel_role }|..|| role

@enduml